<resources>
    <string name="app_name">CacheForAndroid</string>
    <string name="btn_get_data">get cache</string>
    <string name="btn_save_data">save cache</string>
    <string name="btn_clear_all">clear all</string>
    <string name="btn_clear_list_share">clear ShareCache and ListCache</string>
    <string name="btn_clear_list">clear ListCache</string>
    <string name="edt_user_id">user id</string>
    <string name="edt_user_name">user name</string>
    <string name="btn_instructions">instructions</string>
    <string name="btn_delete_all">delete all</string>
    <string name="btn_batch_addition">batch addition</string>
    <string name="btn_batch_delation">batch delation</string>
    <string name="btn_batch_update">batch update</string>
    <string name="edt_user_password">password</string>
    <string name="btn_add_user">add user</string>
    <string name="btn_delete_user">delete user</string>
    <string name="btn_update_user">update user</string>
    <string name="btn_select_user">select user</string>
    <string name="btn_has_key">has key</string>
    <string name="btn_no_key">no key</string>
    <string name="btn_cache_share">Cache Way1-SharePreferences</string>
    <string name="btn_cache_properties">Cache Way2-Properties</string>
    <string name="btn_cache_obj">Cache Way3-File（Serializable Object）</string>
    <string name="btn_cache_database">Cache Way4-database（SQLCipher encrytion）</string>
    <string name="btn_composite_cache">Composite Cache-cache list-shareprefrences-database</string>
    <string name="btn_set_properties">set Properties</string>
    <string name="btn_get_properties">get Properties</string>
    <string name="btn_serializable">serializable object</string>
    <string name="btn_deserializable">deserializable object</string>
    <string name="btn_set_default_share">save default SharePreferences</string>
    <string name="btn_get_default_share">get default SharePreferences</string>
    <string name="btn_set_named_share">save named SharePreferences</string>
    <string name="btn_get_named_share">get named SharePreferences</string>

    <string name="get_data_from_dbcache">get data from DBCache\n</string>
    <string name="please_input_user_name">please input user name</string>
    <string name="please_input_user_id">please input user id</string>
    <string name="please_input_user_password">please input user password</string>
    <string name="hint_delete_success">delete success</string>
    <string name="hint_not_exist_user">not exist user</string>
    <string name="hint_cannot_update_not_exist_user">cannot update not exist user</string>
    <string name="hint_update_success">update success</string>
    <string name="hint_save_success">save success</string>
    <string name="hint_saved">saved</string>
    <string name="hint_restored">restored</string>
    <string name="hint_data_from_listcache">get data from ListCache\n</string>
    <string name="hint_no_data_from_cache">get no data from cache\n</string>
    <string name="hint_data_from_sharecache">get data from ShareCache\n</string>
    <string name="hint_save_in_cache">save in cache\n</string>
</resources>
