<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edt_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_user_id"/>
        <EditText
            android:id="@+id/edt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_user_name"/>
        <Button
            style="@style/btnFunctionBlue"
            android:onClick="clickInstructions"
            android:text="@string/btn_instructions" />

        <Button
            style="@style/btnFunctionGray"
            android:onClick="clickDBUserAdd"
            android:text="@string/btn_add_user" />

        <Button
            style="@style/btnFunctionBlue"
            android:onClick="clickDBUserDelete"
            android:text="@string/btn_delete_user" />

        <Button
            style="@style/btnFunctionGray"
            android:onClick="clickDBUserUpdate"
            android:text="@string/btn_update_user" />

        <Button
            style="@style/btnFunctionBlue"
            android:onClick="clickDBUserSelect"
            android:text="@string/btn_select_user" />
        <Button
            style="@style/btnFunctionGray"
            android:onClick="clickDBUserDeleteAll"
            android:text="@string/btn_delete_all" />
        <Button
            style="@style/btnFunctionBlue"
            android:onClick="clickDBUserAddTx"
            android:text="@string/btn_batch_addition" />
        <Button
            style="@style/btnFunctionGray"
            android:onClick="clickDBUserDeleteTx"
            android:text="@string/btn_batch_delation" />

        <Button
            style="@style/btnFunctionBlue"
            android:onClick="clickDBUserUpdateTx"
            android:text="@string/btn_batch_update" />

    </LinearLayout>
</ScrollView>