<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            style="@style/btnFunctionBlue"
            android:onClick="clickShowGetCacheResult"
            android:text="@string/btn_get_data"/>

        <Button
            style="@style/btnFunctionGray"
            android:onClick="clickSaveDataInCache"
            android:text="@string/btn_save_data"/>

        <Button
            style="@style/btnFunctionBlue"
            android:onClick="clickClearAllCache"
            android:text="@string/btn_clear_all"/>
        <Button
            style="@style/btnFunctionGray"
            android:onClick="clickClearShareAndListCache"
            android:text="@string/btn_clear_list_share"/>
        <Button
            style="@style/btnFunctionBlue"
            android:onClick="clickClearListCache"
            android:text="@string/btn_clear_list"/>
        <TextView
            android:id="@+id/txt_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>
