<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            style="@style/btnFunctionBlue"
            android:onClick="clickInstructions"
            android:text="@string/btn_instructions"/>

        <Button
            style="@style/btnFunctionGray"
            android:onClick="clickSetProperties"
            android:text="@string/btn_set_properties"/>

        <Button
            style="@style/btnFunctionBlue"
            android:onClick="clickGetProperties"
            android:text="@string/btn_get_properties"/>
    </LinearLayout>

</ScrollView>
